Snoman footer updated

--- a/Snowman/home.html
+++ b/Snowman/home.html
@@ -34,7 +34,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
-                            <a class="navbar-brand" href="index.html"> <img src="img/Snowman Navbar Logo.png" alt="logo" width="50%"> </a>
+                            <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo" width="50%"> </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                 aria-expanded="false" aria-label="Toggle navigation">
@@ -47,10 +47,10 @@
                                         <a class="nav-link" href="home.html">HOME</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="fighter.html">SNOWMAN</a> 
+                                        <a class="nav-link" href="snowman.html">SNOWMAN</a> 
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="team.html">CLAN</a>
+                                        <a class="nav-link" href="clan.html">CLAN</a>
                                     </li>
                                     <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown"
@@ -59,22 +59,22 @@
                                             GAMES
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="blog.html">VALORANT</a>
-                                            <a class="dropdown-item" href="single-blog.html">GTA-V</a>
-                                            <a class="dropdown-item" href="single-blog.html">FIFA - 23</a>
-                                            <a class="dropdown-item" href="single-blog.html">Euro Truck SImulator</a>
+                                            <a class="dropdown-item" href="valorant.html">VALORANT</a>
+                                            <a class="dropdown-item" href="gtav.html">GTA-V</a>
+                                            <a class="dropdown-item" href="fifa23.html">FIFA - 23</a>
+                                            <a class="dropdown-item" href="ets.html">Euro Truck SImulator</a>
                                         </div>
                                     </li>
-                                    <!-- <li class="nav-item dropdown">
+                                    <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown1"
                                             role="button" data-toggle="dropdown" aria-haspopup="true"
                                             aria-expanded="false">
-                                            pages
+                                            TUTORIAL
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                                            <a class="dropdown-item" href="elements.html">Elements</a>
+                                            <a class="dropdown-item" href="elements.html">GTA - V</a>
                                         </div>
-                                    </li> -->
+                                    </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="contact.html">CONTACT</a>
                                     </li>
@@ -543,63 +543,51 @@
         <!-- pricing part end-->
 
         <!--::footer_part start::-->
-        <!-- <footer class="footer_part">
+        <footer class="footer_part">
             <div class="footer_top">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
-                                <a href="index.html" class="footer_logo_iner"> <img src="../" alt="#"> </a>
-                                <p>Heaven fruitful doesn't over lesser days appear creeping seasons so behold bearing
-                                    days
-                                    open
+                                <h4>SNOWMAN</h4>
+                                <p align="justify">"Snowman" refers to a virtual persona or digital identity 
+                                    that exclusively exists only in the virtual realm of video games and online gaming communities. 
+                                    It is important to emphasize that this virtual identity is established solely for legitimate
+                                     and ethical purposes within the gaming environment. It is not intended for any unethical or
+                                      malicious activities.
                                 </p>
                             </div>
                         </div>
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
-                                <h4>Contact Info</h4>
-                                <p>Address : Your address goes
-                                    here, your demo address.
-                                    Bangladesh.</p>
-                                <p>Phone : +8880 44338899</p>
-                                <p>Email : info@colorlib.com</p>
+                                <h4>Physical form</h4>
+                                <p align="justify">Saif Ahammod Khan is a diligent student studying at North South University. 
+                                    Originally from Rajshahi, Bangladesh, he has a strong commitment to his education. 
+                                    Currently residing in Dhaka, the capital city of Bangladesh, Saif is focused on his 
+                                    studies and aspiring to create a bright future for himself.
                             </div>
                         </div>
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
                                 <h4>Important Link</h4>
                                 <ul class="list-unstyled">
-                                    <li><a href=""> WHMCS-bridge</a></li>
-                                    <li><a href="">Search Domain</a></li>
-                                    <li><a href="">My Account</a></li>
-                                    <li><a href="">Shopping Cart</a></li>
-                                    <li><a href="">Our Shop</a></li>
+                                    <li><a href="">FACEBOOK PAGE</a></li>
+                                    <li><a href="">YOUTUBE</a></li>
+                                    <li><a href="">DISCORD  COMMUNITY</a></li>
+                                    <li><a href="">TWITTER</a></li>
+                                    <li><a href="">INSTAGRAM</a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
-                                <h4>Newsletter</h4>
-                                <p>Heaven fruitful doesn't over lesser in days. Appear creeping seasons deve behold
-                                    bearing
-                                    days
-                                    open
+                                <h4>Thank you Colorib</h4>
+                                <p align="justify">I wanted to express my heartfelt thanks for the outstanding website template 
+                                    I obtained from <a href="https://colorlib.com/">Colorib</a>. The design is impressive, and I'm eager to customize 
+                                    it to meet my project's requirements. Your generosity in sharing this template 
+                                    is greatly appreciated, and I'm confident it will play a crucial role in the 
+                                    success of my website. Thanks again for your fantastic work!
                                 </p>
-                                <div id="mc_embed_signup">
-                                    <form target="_blank"
-                                        action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                                        method="get" class="subscribe_form relative mail_part">
-                                        <input type="email" name="email" id="newsletter-form-email"
-                                            placeholder="Email Address" class="placeholder hide-on-focus"
-                                            onfocus="this.placeholder = ''"
-                                            onblur="this.placeholder = ' Email Address '">
-                                        <button type="submit" name="submit" id="newsletter-submit"
-                                            class="email_icon newsletter-submit button-contactForm"><i
-                                                class="far fa-paper-plane"></i></button>
-                                        <div class="mt-10 info"></div>
-                                    </form>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -609,27 +597,25 @@
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-8">
-                            <div class="copyright_text">-->
-                                <!-- <P>Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> 
-<!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.</P> -->
-                            <!-- </div>
+                            <div class="copyright_text">
+                                <P> © All rights reserved to Saif Ahammod Khan Aka SNOWMAN</P>
+                            </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="footer_icon social_icon">
                                 <ul class="list-unstyled">
-                                    <li><a href="#" class="single_social_icon"><i class="fab fa-facebook-f"></i></a>
-                                    </li>
+                                    <li><a href="https://www.facebook.com/gaming/snowman0421" class="single_social_icon">
+                                        <i class="fab fa-facebook-f"></i></a></li>
                                     <li><a href="#" class="single_social_icon"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#" class="single_social_icon"><i class="fas fa-globe"></i></a></li>
-                                    <li><a href="#" class="single_social_icon"><i class="fab fa-behance"></i></a></li>
+                                    <li><a href="#" class="single_social_icon"><i class="fab fa-youtube"></i></a></li>
+                                    <li><a href="#" class="single_social_icon"><i class="fab fa-discord"></i></a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </footer> -->
+        </footer>
         <!--::footer_part end::-->
     </div>
 
