Snoman footer Social media added

--- a/Snowman/home.html
+++ b/Snowman/home.html
@@ -571,11 +571,11 @@
                             <div class="single_footer_part">
                                 <h4>Important Link</h4>
                                 <ul class="list-unstyled">
-                                    <li><a href="">FACEBOOK PAGE</a></li>
-                                    <li><a href="">YOUTUBE</a></li>
-                                    <li><a href="">DISCORD  COMMUNITY</a></li>
-                                    <li><a href="">TWITTER</a></li>
-                                    <li><a href="">INSTAGRAM</a></li>
+                                    <li><a href="https://www.facebook.com/snowman0421">FACEBOOK PAGE</a></li>
+                                    <li><a href="https://www.youtube.com/channel/UCltyvTSm1860UvUkWZ7n9SQ">YOUTUBE</a></li>
+                                    <li><a href="https://discord.gg/pspnrySFqQ">DISCORD  COMMUNITY</a></li>
+                                    <li><a href="https://twitter.com/SaifAhammod">TWITTER</a></li>
+                                    <li><a href="https://www.instagram.com/saifahammod/">INSTAGRAM</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -606,9 +606,12 @@
                                 <ul class="list-unstyled">
                                     <li><a href="https://www.facebook.com/gaming/snowman0421" class="single_social_icon">
                                         <i class="fab fa-facebook-f"></i></a></li>
-                                    <li><a href="#" class="single_social_icon"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#" class="single_social_icon"><i class="fab fa-youtube"></i></a></li>
-                                    <li><a href="#" class="single_social_icon"><i class="fab fa-discord"></i></a></li>
+                                    <li><a href="https://twitter.com/SaifAhammod" class="single_social_icon">
+                                        <i class="fab fa-twitter"></i></a></li>
+                                    <li><a href="https://www.youtube.com/channel/UCltyvTSm1860UvUkWZ7n9SQ" class="single_social_icon">
+                                        <i class="fab fa-youtube"></i></a></li>
+                                    <li><a href="https://discord.gg/pspnrySFqQ" class="single_social_icon">
+                                        <i class="fab fa-discord"></i></a></li>
                                 </ul>
                             </div>
                         </div>
