--- a/Snowman/setup.html
+++ b/Snowman/setup.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>gaming</title>
+    <title>Setup</title>
     <link rel="icon" href="img/favicon.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -34,7 +34,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
-                            <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"> </a>
+                            <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo" width="50%"> </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                 aria-expanded="false" aria-label="Toggle navigation">
@@ -44,41 +44,43 @@
                             <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                                 <ul class="navbar-nav">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="index.html">Home</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="fighter.html">fighter</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="team.html">team</a>
-                                    </li>
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown"
-                                            role="button" data-toggle="dropdown" aria-haspopup="true"
-                                            aria-expanded="false">
-                                            Blog
-                                        </a>
-                                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="blog.html"> blog</a>
-                                            <a class="dropdown-item" href="single-blog.html">Single blog</a>
-                                        </div>
-                                    </li>
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown1"
-                                            role="button" data-toggle="dropdown" aria-haspopup="true"
-                                            aria-expanded="false">
-                                            pages
-                                        </a>
-                                        <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                                            <a class="dropdown-item" href="elements.html">Elements</a>
-                                        </div>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="contact.html">Contact</a>
-                                    </li>
-                                </ul>
+                                         <a class="nav-link" href="home.html">HOME</a>
+                                     </li>
+                                     <li class="nav-item">
+                                         <a class="nav-link" href="setup.html">Setup</a> 
+                                     </li>
+                                     <li class="nav-item">
+                                         <a class="nav-link" href="clan.html">CLAN</a>
+                                     </li>
+                                     <li class="nav-item dropdown">
+                                         <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown"
+                                             role="button" data-toggle="dropdown" aria-haspopup="true"
+                                             aria-expanded="false">
+                                             GAMES
+                                         </a>
+                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                             <a class="dropdown-item" href="valorant.html">VALORANT</a>
+                                             <a class="dropdown-item" href="gtav.html">GTA-V</a>
+                                             <a class="dropdown-item" href="fifa23.html">FIFA - 23</a>
+                                             <a class="dropdown-item" href="ets.html">Euro Truck SImulator</a>
+                                         </div>
+                                     </li>
+                                     <li class="nav-item dropdown">
+                                         <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown1"
+                                             role="button" data-toggle="dropdown" aria-haspopup="true"
+                                             aria-expanded="false">
+                                             TUTORIAL
+                                         </a>
+                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                                             <a class="dropdown-item" href="elements.html">GTA - V</a>
+                                         </div>
+                                     </li>
+                                     <li class="nav-item">
+                                         <a class="nav-link" href="contact.html">CONTACT</a>
+                                     </li>
+                                 </ul>
                             </div>
-                            <a href="#" class="btn_1 d-none d-sm-block">Install Now</a>
+                            <!-- <a href="#" class="btn_1 d-none d-sm-block">Install Now</a> -->
                         </nav>
                     </div>
                 </div>
@@ -93,7 +95,7 @@
                     <div class="col-lg-12">
                         <div class="breadcrumb_iner text-center">
                             <div class="breadcrumb_iner_item">
-                                <h2>Fighter</h2>
+                                <h2>My Setup</h2>
                             </div>
                         </div>
                     </div>
@@ -103,7 +105,7 @@
         <!-- breadcrumb start-->
 
         <!--::client logo part end::-->
-        <section class="client_logo">
+        <!-- <section class="client_logo">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12">
@@ -133,11 +135,11 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!--::client logo part end::-->
 
         <!-- gallery_part part start-->
-        <section class="gallery_part section_padding">
+        <!-- <section class="gallery_part section_padding">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-5">
@@ -231,11 +233,11 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- gallery_part part end-->
 
         <!-- use sasu part end-->
-        <section class="upcomming_war">
+        <!-- <section class="upcomming_war">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
@@ -258,7 +260,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- use sasu part end-->
 
         <!--::footer_part start::-->
