--- a/Snowman/home.html
+++ b/Snowman/home.html
@@ -72,7 +72,7 @@
                                             TUTORIAL
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                                            <a class="dropdown-item" href="elements.html">GTA - V</a>
+                                            <a class="dropdown-item" href="tutorialGTAV.html">GTA - V</a>
                                         </div>
                                     </li>
                                     <li class="nav-item">
