Snoman Setup Secondary laptop added

--- a/Snowman/setup.html
+++ b/Snowman/setup.html
@@ -149,7 +149,7 @@
                     </div>
                 </div>
                 <div class="section-top-border">
-					<h3 class="mb-30">LAPTOP</h3>
+					<h3 class="mb-30">PRIMARY LAPTOP</h3>
 					<div class="row">
 						<div class="col-md-3">
 							<img src="img/SETUP IMAGE/ASUSTUFF.webp" alt="" class="img-fluid">
@@ -157,9 +157,24 @@
 						<div class="col-md-9 mt-sm-20">
 							<h4>Asus TUF Dash F15 FX517ZE Core i7 12th Gen RTX 3050 4GB Graphics 15.6" FHD WV Gaming Laptop</h4>
                             <p>Processor: Intel Core i7-12650H (12th Gen)</p>
-                            <p>Display: 15.6 Inch LED Full HD (1920x1080) with 300 Hz Refresh Rate</p>
+                            <p>Display: 15.6" LED Full HD (1920x1080) with 300 Hz Refresh Rate</p>
                             <p>RAM: 16GB DDR5 with 4800Mhz Bus Speed</p>
                             <p>Graphics: 4GB Nvidia RTX 3050 Ti</p>
+						</div>
+					</div>
+				</div>
+                <div class="section-top-border">
+					<h3 class="mb-30">SECONDARY LAPTOP</h3>
+					<div class="row">
+						<div class="col-md-3">
+							<img src="img/SETUP IMAGE/HP.png" alt="" class="img-fluid">
+						</div>
+						<div class="col-md-9 mt-sm-20">
+							<h4>HP Pavilion - 15-au171tx</h4>
+                            <p>Processor: Intel Core i5-7200U (7th Gen)</p>
+                            <p>Display: 15.6" HD SVA BrightView WLED-backlit (1366 x 768)</p>
+                            <p>RAM: 16GB DDR4 with 2133Mhz Bus Speed</p>
+                            <p>Graphics: 4GB NVIDIA GeForce 940MX</p>
 						</div>
 					</div>
 				</div>
@@ -170,7 +185,9 @@
 							<img src="img/elements/d.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="col-md-9 mt-sm-20">
-							<p>Your Text here</p>
+							<h4>Title</h4>
+                            <p>Details: </p>
+  
 						</div>
 					</div>
 				</div>
@@ -181,7 +198,8 @@
 							<img src="img/elements/d.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="col-md-9 mt-sm-20">
-							<p>Your Text here</p>
+							<h4>Title</h4>
+                            <p>Details: </p>
 						</div>
 					</div>
 				</div>
@@ -192,29 +210,32 @@
 							<img src="img/elements/d.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="col-md-9 mt-sm-20">
-							<p>Your Text here</p>
+							<h4>Title</h4>
+                            <p>Details: </p>
 						</div>
 					</div>
 				</div>
                 <div class="section-top-border">
-					<h3 class="mb-30">Headphone</h3>
+					<h3 class="mb-30">Monitor</h3>
 					<div class="row">
 						<div class="col-md-3">
 							<img src="img/elements/d.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="col-md-9 mt-sm-20">
-							<p>Your Text here</p>
+							<h4>Title</h4>
+                            <p>Details: </p>
 						</div>
 					</div>
 				</div>
                 <div class="section-top-border">
-					<h3 class="mb-30">Headphone</h3>
+					<h3 class="mb-30">Gamepad</h3>
 					<div class="row">
 						<div class="col-md-3">
 							<img src="img/elements/d.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="col-md-9 mt-sm-20">
-							<p>Your Text here</p>
+							<h4>Title</h4>
+                            <p>Details: </p>
 						</div>
 					</div>
 				</div>
