Snoman Setup mouse added

--- a/Snowman/setup.html
+++ b/Snowman/setup.html
@@ -179,14 +179,17 @@
 					</div>
 				</div>
                 <div class="section-top-border">
-					<h3 class="mb-30">Mouse</h3>
+					<h3 class="mb-30">MOUSE</h3>
 					<div class="row">
 						<div class="col-md-3">
-							<img src="img/elements/d.jpg" alt="" class="img-fluid">
+							<img src="img/SETUP IMAGE/MOUSE.png" alt="" class="img-fluid">
 						</div>
 						<div class="col-md-9 mt-sm-20">
-							<h4>Title</h4>
-                            <p>Details: </p>
+							<h4>CORSAIR KATAR PRO Ultra-Light Gaming Mouse </h4>
+                            <p align="justify">Weighing just 69g, the KATAR PRO is extremely light and agile for hours 
+                                of fast-paced FPS or MOBA gameplay. The compact, symmetric shape makes it 
+                                great for claw and fingertip grip styles. A custom PixArt 12,400 DPI optical 
+                                sensor offers the precision and high-accuracy tracking you need for victory.</p>
   
 						</div>
 					</div>
