Snoman Setup keyboard added

--- a/Snowman/setup.html
+++ b/Snowman/setup.html
@@ -198,11 +198,14 @@
 					<h3 class="mb-30">Keyboard</h3>
 					<div class="row">
 						<div class="col-md-3">
-							<img src="img/elements/d.jpg" alt="" class="img-fluid">
+							<img src="img/SETUP IMAGE/Keyboard.png" alt="" class="img-fluid">
 						</div>
 						<div class="col-md-9 mt-sm-20">
-							<h4>Title</h4>
-                            <p>Details: </p>
+							<h4>Redragon K551RGB MITRA RGB Backlit Mechanical Keyboard with Blue Switches</h4>
+                            <p align="justify">GAMING KEYBOARD; 104 Key Mechanical Gaming Keyboard with Custom Mechanical Switches
+                                (Cherry Blue equivalent) designed for longevity with greater durability and responsiveness. 
+                                Fast mechanical keys with medium resistance, precise actuation, audible click sound, 
+                                and tactile bump feedback.</p>
 						</div>
 					</div>
 				</div>
