Snoman Setup some picture updated

--- a/Snowman/setup.html
+++ b/Snowman/setup.html
@@ -152,7 +152,7 @@
 					<h3 class="mb-30">PRIMARY LAPTOP</h3>
 					<div class="row">
 						<div class="col-md-3">
-							<img src="img/SETUP IMAGE/ASUSTUFF.webp" alt="" class="img-fluid">
+							<img src="img/SETUP IMAGE/ASUSTUFF.png" alt="" class="img-fluid">
 						</div>
 						<div class="col-md-9 mt-sm-20">
 							<h4>Asus TUF Dash F15 FX517ZE Core i7 12th Gen RTX 3050 4GB Graphics 15.6" FHD WV Gaming Laptop</h4>
@@ -213,7 +213,7 @@
 					<h3 class="mb-30">Headphone</h3>
 					<div class="row">
 						<div class="col-md-3">
-							<img src="img/elements/d.jpg" alt="" class="img-fluid">
+							<img src="img/SETUP IMAGE/Headphone1.png" alt="" class="img-fluid">
 						</div>
 						<div class="col-md-9 mt-sm-20">
 							<h4>Title</h4>
