Snoman Setup Headphone added

--- a/Snowman/setup.html
+++ b/Snowman/setup.html
@@ -213,11 +213,14 @@
 					<h3 class="mb-30">Headphone</h3>
 					<div class="row">
 						<div class="col-md-3">
-							<img src="img/SETUP IMAGE/Headphone1.png" alt="" class="img-fluid">
+							<img src="img/SETUP IMAGE/Headphone.png" alt="" class="img-fluid">
 						</div>
 						<div class="col-md-9 mt-sm-20">
-							<h4>Title</h4>
-                            <p>Details: </p>
+							<h4>Redragon H320 LAMIA-2 7.1 Surround Sound USB Gaming Headset </h4>
+                            <p align="justify">The Redragon H320 LAMIA 2 USB 7.1 Surround Sound RGB Gaming Headset 
+                                offers high quality 7.1 surround sound. Its free-adjustable headband 
+                                with a lightweight frame will free your head from extra burdens when 
+                                gaming or listening to music.</p>
 						</div>
 					</div>
 				</div>
